Cascading Change Log

1.2.3 [unreleased]

  Updated error message thrown by c.f.FlowStep when unable to find c.t.Tap or c.p.Pipe instances in the flow plan due
  to a Class serialized field not implementing #hashCode() or #equals() and relying in the object identity.

  Added error message explaining the Hadoop mapred.jobtracker.completeuserjobs.maximum property needs to be increased
  when dealing with large numbers of jobs.

  Fixed bug in c.t.GlobHfs where #equals() and #hashCode() were not consistent between calls.

1.2.2

  Fixed bug where OOME caught from within the source c.t.Tap was not being re-thrown properly.

  Added #getMapProgress() and #getReduceProgress() to c.f.h.HadoopStepStats.

  Fixed NPE with some invocations of c.t.TupleEntry ctor.

  Fixed bug where if an operation declared it returned Fields.ARGS and the argument selector used positions, the
  outgoing values may merge incorrectly.

1.2.1

  Changed info message to not announce ambiguous source trap if none has been set.

  Fixed bug where if the c.o.Function result c.t.Tuple was passed immediately to a c.p.Group, it may become modified.

  Fixed bug where c.t.TupleEntryIterator#hasNext() failed if called again after returning false.

  Fixed issue where reduce task may fail with a OOME during sorting.

1.2.0

  Added c.p.a.AverageBy sub-assembly for optimizing averaging processes.

  Added c.p.c.GroupClosure#getFlowProcess method to allow c.p.c.Joiner implementations access to current
  properties and counters.

  Added c.s.CascadingStats methods for accessing available counter groups and names.

  Added c.s.WritableSequenceFile as a convenience for reading/writing sequence files holding custom Hadoop
  Writable types in either they key, value, or key and value positions.

  Added retrieve/publish support to the Conjars repo via Ivy.

  Added the c.p.a.AggregateBy class to encapsulate parallel partial Function aggregations and their reduce